k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-app
  namespace: namespace-music-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: music-app
  template:
    metadata:
      labels:
        app: music-app
    spec:
      containers:
        - name: music-app
          image: miro028/music_app:latest
          ports:
            - containerPort: 8080
