k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: music-app-service
  namespace: namespace-music-app
spec:
  selector:
    app: music-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
