k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-app-ingress
  namespace: namespace-music-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: musics-apps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: music-app-service
                port:
                  number: 80
